--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"files.associations": {
-		"cub3d.h": "c"
+		"cub3d.h": "c",
+		"get_next_line.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
